Fixed page overflow for mobile

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ h6 {
     scroll-padding-top: 25%;
 }
 
-body {
+.body {
     margin-top: 0px;
     margin-bottom: 0px;
     margin-right: 0px;
